--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fast-glob": "^3.3.2",
     "flexsearch": "^0.7.43",
     "js-yaml": "^4.1.0",
+    "lucide-react": "^0.370.0",
     "next": "^14.2.1",
     "next-themes": "^0.3.0",
     "prism-react-renderer": "^2.3.1",
